--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,66 +11,61 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="center_horizontal"
-        >
+        android:orientation="vertical">
 
         <!--Display whether bluetooth is available or not-->
         <!--Bluetooth icon (on/off)-->
         <ImageView
             android:id="@+id/bluetoothIv"
             android:layout_width="100dp"
-            android:layout_height="100dp" />
+            android:layout_height="100dp"
+            android:contentDescription="TODO" />
         <!--On Button-->
         <Button
             android:id="@+id/onBtn"
-            android:minWidth="200dp"
+            style="@style/Base.Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Turn On"
-            style="@style/Base.Widget.AppCompat.Button.Colored"/>
+            android:minWidth="200dp"
+            android:text="Turn On" />
         <!--Off btn-->
         <Button
             android:id="@+id/offBtn"
-            android:minWidth="200dp"
+            style="@style/Base.Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Turn Off"
-            style="@style/Base.Widget.AppCompat.Button.Colored"/>
+            android:minWidth="200dp"
+            android:text="Turn Off" />
         <!--Discoverable button-->
         <Button
             android:id="@+id/discoverableBtn"
-            android:minWidth="200dp"
+            style="@style/Base.Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Discoverable"
-            style="@style/Base.Widget.AppCompat.Button.Colored"/>
+            android:minWidth="200dp"
+            android:text="Discoverable" />
         <!--Get list of paired devices button-->
         <Button
             android:id="@+id/pairedBtn"
-            android:minWidth="200dp"
+            style="@style/Base.Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Get Paired Devices"
-            style="@style/Base.Widget.AppCompat.Button.Colored"/>
+            android:minWidth="200dp"
+            android:text="Get Paired Devices" />
         <!--Show paired devices here-->
         <TextView
             android:id="@+id/pairedTv"
+            android:layout_width="match_parent"
+            android:layout_height="243dp"
             android:minWidth="200dp"
             android:text=""
-            android:textColor="#000"
+            android:textColor="#000" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/RecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/button"
-            android:minWidth="200dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
-
-
+            android:layout_height="match_parent" />
     </LinearLayout>
 
-
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
