--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     android:background="#88C34A"
     android:orientation="vertical"
@@ -17,17 +17,19 @@
         tools:text="Hello Title" />
 
     <TextView
-        android:id ="@+id/tvCharacter"
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:textSize = "14sp"
-        tools:text = "Hello Body" />
+        android:id="@+id/tvCharacter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#004D40"
+        android:textSize="14sp"
+        tools:text="Hello Body" />
 
     <TextView
-        android:id ="@+id/tvQuote"
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:textSize = "11sp"
-        tools:text = "Hello Body" />
+        android:id="@+id/tvQuote"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#004D40"
+        android:textSize="11sp"
+        tools:text="Hello Body 2" />
 
 </LinearLayout>
