--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,58 +13,98 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <!--Display whether bluetooth is available or not-->
-        <!--Bluetooth icon (on/off)-->
-        <ImageView
-            android:id="@+id/bluetoothIv"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:contentDescription="TODO" />
-        <!--On Button-->
-        <Button
-            android:id="@+id/onBtn"
-            style="@style/Base.Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="200dp"
-            android:text="Turn On" />
-        <!--Off btn-->
-        <Button
-            android:id="@+id/offBtn"
-            style="@style/Base.Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="200dp"
-            android:text="Turn Off" />
-        <!--Discoverable button-->
-        <Button
-            android:id="@+id/discoverableBtn"
-            style="@style/Base.Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="200dp"
-            android:text="Discoverable" />
-        <!--Get list of paired devices button-->
-        <Button
-            android:id="@+id/pairedBtn"
-            style="@style/Base.Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="200dp"
-            android:text="Get Paired Devices" />
-        <!--Show paired devices here-->
-        <TextView
-            android:id="@+id/pairedTv"
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
-            android:layout_height="243dp"
-            android:minWidth="200dp"
-            android:text=""
-            android:textColor="#000" />
+            android:layout_height="272dp"
+            android:layout_margin="16dp"
+            card_view:cardBackgroundColor="#ADD8E6"
+            card_view:cardCornerRadius="4dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <!--Display whether bluetooth is available or not-->
+                <!--Bluetooth icon (on/off)-->
+                <!--On Button-->
+
+                <!--Off btn-->
+
+                <ImageView
+                    android:id="@+id/bluetoothIv"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_centerVertical="true"
+                    android:contentDescription="BlueTooth Status" />
+
+                <!--Show paired devices here-->
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="52dp"
+                    android:layout_toEndOf="@+id/bluetoothIv"
+                    android:orientation="vertical">
+
+                    <!--Discoverable button-->
+
+                    <Button
+                        android:id="@+id/onBtn"
+                        style="@style/Base.Widget.AppCompat.Button.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:minWidth="200dp"
+                        android:text="Turn On" />
+
+                    <Button
+                        android:id="@+id/offBtn"
+                        style="@style/Base.Widget.AppCompat.Button.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:minWidth="200dp"
+                        android:text="Turn Off" />
+
+                    <!--Get list of paired devices button-->
+                    <Button
+                        android:id="@+id/discoverableBtn"
+                        style="@style/Base.Widget.AppCompat.Button.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:minWidth="200dp"
+                        android:text="Discoverable" />
+
+                    <Button
+                        android:id="@+id/pairedBtn"
+                        style="@style/Base.Widget.AppCompat.Button.Colored"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:minWidth="200dp"
+                        android:text="Get Paired Devices" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/pairedTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/bluetoothIv"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginTop="13dp"
+                    android:minWidth="200dp"
+                    android:text=""
+                    android:textColor="#000" />
+
+            </RelativeLayout>
+
+        </com.google.android.material.card.MaterialCardView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="423dp" />
+
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
