--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,18 +82,28 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/pairedTv"
+                <ScrollView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/bluetoothIv"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginTop="13dp"
-                    android:minWidth="200dp"
-                    android:text=""
-                    android:textColor="#000" />
+                    android:scrollbars="vertical"
+                    android:layout_margin="12dp"
+                    android:fillViewport="true"
+                    android:background="@color/white">
+
+                    <TextView
+                        android:id="@+id/pairedTv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.0"
+                        android:minWidth="200dp"
+                        android:text=""
+                        android:textColor="#000" />
+
+                </ScrollView>
 
             </RelativeLayout>
 
